# GeneticAlgorithm

./: LICENCE.txt  README.md  main.py  pyproject.toml  requirements.txt
genetic/: utils.py
genetic/genetic/: chromosome.py  crossovers.py  gene.py  genetic.py  individual.py  mutations.py  population.py  problems.py  selections.py
src/genetic/: __main__.py  base.py  chromosome.py  crossovers.py  gene.py  genetic.py  individual.py  mutations.py  population.py  population_generator.py  problems.py  problems_types.py  selections.py
src/genetic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/genetic/utils/: utils.py
